@@ -3,6 +3,7 @@ package blackjack.domain;
 import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -12,13 +13,15 @@ class ParticipantsTest {
     @DisplayName("생성 테스트")
     @Test
     void create() {
-        assertThatCode(() -> new Participants(List.of("아톰", "구름")));
+        assertThatCode(() -> new Participants(List.of("아톰", "구름")))
+                .doesNotThrowAnyException();
     }
 
     @DisplayName("참여자들은 딜러 포함 최소 2명 이상이어야 한다.")
     @Test
     void validatePlayerSize() {
-        assertThatThrownBy(() -> new Participants(List.of()))
+        List<String> empty = Collections.emptyList();
+        assertThatThrownBy(() -> new Participants(empty))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
